@@ -38,7 +38,7 @@
     </div>
     <div class="version">
       <div>Version <%= CruiseControl::VERSION::STRING %></div>
-      <div>Powered by <a href="htp://rubyonrails.org">Ruby on Rails</a></div>
+      <div>Powered by <a href="http://rubyonrails.org">Ruby on Rails</a></div>
     </div>
   </div>
 
